--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "paths": {
         "src": {
             "base": "./src/",
-            "fontello": "./src/fontello/",
             "fonts": "./src/fonts/",
             "json": "./src/json/",
             "js": "./src/js/",
@@ -26,21 +25,19 @@
             "img": "./web/assets/img/"
         },
         "build": {
-            "base": "./generated/",
-            "css": "./generated/css/",
-            "fontello": "./generated/fonts/fontello/",
-            "fonts": "./generated/fonts/",
-            "js": "./generated/js/",
-            "html": "./generated/html/",
-            "img": "./generated/img/",
-            "sprites": "./generated/sprites/"
+            "base": "./build/",
+            "css": "./build/css/",
+            "fonts": "./build/fonts/",
+            "js": "./build/js/",
+            "html": "./build/html/",
+            "img": "./build/img/",
+            "sprites": "./build/sprites/"
         },
         "favicon": {
             "src": "./src/img/favicon_src.png",
             "dest": "./public/img/site/",
             "path": "/img/site/"
         },
-        "scss": [],
         "templates": "./templates/"
     },
     "domains": {
@@ -51,63 +48,44 @@
     "urls": {
         "live": "https://cityofmarion.in.gov/",
         "local": "https://cityofmarion.in.dev/",
-        "critical": "http://cityofmarion.in.dev/"
+        "critical": "https://cityofmarion.in.dev/"
     },
     "vars": {
         "siteCssName": "site.combined.min.css",
+        "siteJsName": "site.combined.js",
         "styleName": "master.styl",
         "cssName": "master.css"
     },
     "globs": {
         "distCss": [
             "./node_modules/normalize.css/normalize.css",
-            "./src/css/prism-theme.css",
-            "./build/fonts/fontello/css/fontello-codes.css",
             "./build/css/*.css",
             "./src/css/*.css"
         ],
         "img": [
             "./public/img/"
         ],
-        "components": [
-            "./src/components/**/*.vue"
-        ],
         "fonts": [
-            "./build/fonts/fontello/font/*.{eot,ttf,woff,woff2}",
             "./src/fonts/*.{eot,ttf,woff,woff2}"
         ],
         "critical": [
             {
                 "url": "",
-                "template": "index"
-            },
-            {
-                "url": "blog/stop-using-htaccess-files-no-really",
-                "template": "blog/_entry"
-            },
-            {
-                "url": "blog/stop-using-htaccess-files-no-really",
-                "template": "blog/_amp_entry"
-            },
-            {
-                "url": "blog",
-                "template": "blog/index"
-            },
-            {
-                "url": "blog",
-                "template": "blog/amp_index"
-            },
-            {
-                "url": "wordpress",
-                "template": "wordpress"
+                "template": "singles/homepage/index"
             },
             {
                 "url": "404",
                 "template": "404"
             }
         ],
+        "download": [
+            {
+                "url": "https://www.google-analytics.com/analytics.js",
+                "dest": "./web/assets/js/"
+            }
+        ],
         "distJs": [
-            "./build/js/*.js",
+            "./node_modules/jquery/dist/jquery.slim.min.js",
             "./node_modules/lazysizes/lazysizes.min.js",
             "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
             "./node_modules/picturefill/dist/picturefill.min.js",
@@ -115,105 +93,53 @@
             "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js",
             "./node_modules/choices.js/assets/scripts/dist/choices.min.js",
             "./node_modules/autosize/dist/autosize.min.js",
-            "./node_modules/vue/dist/vue.min.js",
-            "./node_modules/vue-resource/dist/vue-resource.min.js"
-        ],
-        "prismJs": [
-            "./node_modules/prismjs/prism.js",
-            "./node_modules/prismjs/components/prism-markup.js",
-            "./node_modules/prismjs/components/prism-apacheconf.js",
-            "./node_modules/prismjs/components/prism-css.js",
-            "./node_modules/prismjs/components/prism-json.js",
-            "./node_modules/prismjs/components/prism-twig.js",
-            "./node_modules/prismjs/components/prism-php.js",
-            "./node_modules/prismjs/components/prism-bash.js",
-            "./node_modules/prismjs/components/prism-javascript.js",
-            "./node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js"
-        ],
-        "systemJs": [
-            "./node_modules/systemjs/dist/system-polyfills.js",
-            "./node_modules/systemjs/dist/system.js",
-            "./src/js/system-config.js"
+            "./src/js/modules/*.js",
+            "./build/js/*.js"
         ],
         "babelJs": [
             "./src/js/*.js"
         ],
-        "inlineJs": [
-            "./node_modules/fg-loadcss/src/loadCSS.js",
-            "./node_modules/fg-loadcss/src/cssrelpreload.js",
-            "./node_modules/fontfaceobserver/fontfaceobserver.js",
-            "./src/js/asyncload-blog-fonts.js",
-            "./src/js/asyncload-site-fonts.js"
-        ],
-        "siteIcon": "./public/img/site/favicon.*"
+        "siteIcon": "./web/assets/img/site/favicon.*"
     },
     "dependencies": {
-        "@fancyapps/fancybox": "^3.2.0",
+        "@fancyapps/fancybox": "^3.2.5",
         "autosize": "^4.0.0",
         "choices.js": "^3.0.2",
         "fg-loadcss": "^1.3.1",
         "font-awesome-stylus": "^4.7.1",
         "fontfaceobserver": "^2.0.13",
+        "jquery": "^3.2.1",
         "lazysizes": "^4.0.1",
         "normalize.css": "^7.0.0",
         "picturefill": "^3.0.2",
-        "prismjs": "^1.8.4",
-        "responsive-social-buttons": "^1.0.7",
-        "systemjs": "^0.20.19",
-        "vue": "^2.5.3",
-        "vue-resource": "^1.3.4",
-        "vue-router": "^2.8.1"
+        "responsive-social-buttons": "^1.0.7"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.0.2",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-istanbul": "^4.1.5",
         "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.1",
         "babel-preset-es2015": "^6.24.1",
-        "babel-preset-stage-2": "^6.22.0",
-        "babel-register": "^6.26.0",
         "browser-sync": "^2.18.13",
-        "chai": "^4.1.2",
         "chalk": "^2.3.0",
-        "chromedriver": "^2.33.2",
-        "connect-history-api-fallback": "^1.4.0",
-        "copy-webpack-plugin": "^4.2.0",
-        "critical": "^0.9.1",
+        "critical": "^1.0.0",
         "cross-env": "^5.1.1",
-        "cross-spawn": "^5.0.1",
         "css-loader": "^0.28.7",
         "css-mqpacker": "^6.0.1",
-        "cssnano": "^3.10.0",
         "csso-stylus": "0.0.3",
         "del": "^3.0.0",
-        "eslint": "^4.10.0",
-        "eslint-config-standard": "^10.2.1",
-        "eslint-friendly-formatter": "^3.0.0",
-        "eslint-loader": "^1.7.1",
-        "eslint-plugin-html": "^3.2.2",
-        "eslint-plugin-promise": "^3.6.0",
-        "eslint-plugin-standard": "^3.0.1",
-        "eventsource-polyfill": "^0.9.6",
-        "express": "^4.16.2",
-        "extract-text-webpack-plugin": "^3.0.2",
         "fancy-log": "^1.3.0",
-        "file-loader": "^0.11.1",
-        "friendly-errors-webpack-plugin": "^1.1.3",
         "git-rev-sync": "^1.9.1",
         "gulp": "^3.9.1",
         "gulp-babel": "^7.0.0",
         "gulp-cached": "^1.1.1",
         "gulp-concat": "^2.6.1",
         "gulp-copy": "^1.0.1",
+        "gulp-cssnano": "^2.1.2",
         "gulp-debug": "^3.1.0",
+        "gulp-download": "^0.0.1",
         "gulp-favicons": "^2.2.7",
-        "gulp-fontello": "^0.4.6",
+        "gulp-filter": "^5.0.1",
         "gulp-header": "^1.8.9",
         "gulp-if": "^2.0.2",
-        "gulp-ignore": "^2.0.2",
-        "gulp-imagemin": "^3.4.0",
+        "gulp-imagemin": "^4.0.0",
         "gulp-load-plugins": "^1.5.0",
         "gulp-newer": "^1.3.0",
         "gulp-plumber": "^1.1.0",
@@ -222,55 +148,23 @@
         "gulp-rename": "^1.2.2",
         "gulp-replace": "^0.6.1",
         "gulp-rev": "^8.1.0",
-        "gulp-sass": "^3.1.0",
         "gulp-size": "^2.1.0",
         "gulp-sourcemaps": "^2.6.1",
+        "gulp-streamify": "^1.0.2",
         "gulp-stylus": "^2.6.0",
         "gulp-svg-sprite": "^1.3.7",
         "gulp-uglify": "^3.0.0",
-        "html-webpack-plugin": "^2.30.1",
-        "http-proxy-middleware": "^0.17.3",
-        "inject-loader": "^3.0.1",
         "jeet": "^7.2.0",
-        "karma": "^1.7.1",
-        "karma-coverage": "^1.1.1",
-        "karma-mocha": "^1.3.0",
-        "karma-phantomjs-launcher": "^1.0.2",
-        "karma-phantomjs-shim": "^1.5.0",
-        "karma-sinon-chai": "^1.3.3",
-        "karma-sourcemap-loader": "^0.3.7",
-        "karma-spec-reporter": "0.0.31",
-        "karma-webpack": "^2.0.5",
-        "lolex": "^2.3.0",
         "lost": "^8.2.0",
-        "mocha": "^3.5.3",
-        "moment": "^2.19.1",
+        "moment": "^2.19.2",
         "nib": "^1.1.2",
-        "nightwatch": "^0.9.12",
-        "opn": "^5.1.0",
-        "optimize-css-assets-webpack-plugin": "^3.2.0",
-        "ora": "^1.2.0",
+        "pa11y": "^4.13.1",
         "phantomjs-prebuilt": "^2.1.16",
-        "postcss-brand-colors": "^1.0.0",
+        "postcss-brand-colors": "^2.0.0",
         "postcss-cssnext": "^3.0.2",
         "poststylus": "^1.0.0",
-        "rimraf": "^2.6.2",
-        "rupture": "^0.6.2",
-        "selenium-server": "^3.7.1",
-        "semver": "^5.4.1",
-        "shelljs": "^0.7.6",
-        "sinon": "^3.3.0",
-        "sinon-chai": "^2.14.0",
-        "url-loader": "^0.5.8",
-        "vue-loader": "^13.5.0",
-        "vue-style-loader": "^3.0.3",
-        "vue-template-compiler": "^2.5.3",
-        "webpack": "^3.8.1",
-        "webpack-bundle-analyzer": "^2.9.0",
-        "webpack-dev-middleware": "^1.12.0",
-        "webpack-hot-middleware": "^2.20.0",
-        "webpack-merge": "^4.1.1",
-        "webpack-stream": "^4.0.0"
+        "rupture": "^0.7.1",
+        "vinyl-source-stream": "^1.1.0"
     },
     "scripts": {
         "start": "gulp",
