--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "dolphiq/titleentriesfield": "^1.0",
         "dukt/facebook": "^2.0",
         "dukt/twitter": "^2.0",
+        "lukeyouell/craft-readtime": "^1.1",
         "lukeyouell/craft-updatechecker": "^1.1",
         "mblode/svgplaceholder": "^1.0",
         "mexitek/phpcolors": "dev-master",
