--- a/package.json
+++ b/package.json
@@ -89,6 +89,9 @@
             "./node_modules/lazysizes/lazysizes.min.js",
             "./node_modules/lazysizes/plugins/bgset/ls.bgset.min.js",
             "./node_modules/picturefill/dist/picturefill.min.js",
+            "./node_modules/jarallax/dist/jarallax.min.js",
+            "./node_modules/jarallax/dist/jarallax-video.min.js",
+            "./node_modules/jarallax/dist/jarallax-element.min.js",
             "./node_modules/responsive-social-buttons/dist/social-buttons.js",
             "./node_modules/@fancyapps/fancybox/dist/jquery.fancybox.min.js",
             "./node_modules/choices.js/assets/scripts/dist/choices.min.js",
@@ -112,6 +115,7 @@
         "fg-loadcss": "^2.0.1",
         "font-awesome-stylus": "^4.7.1",
         "fontfaceobserver": "^2.0.13",
+        "jarallax": "^1.10.7",
         "jquery": "^3.3.1",
         "lazysizes": "^4.0.1",
         "normalize.css": "^8.0.0",
